# workspace

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.example.toml  fly.toml  main.py  prek.toml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  fly-deploy.yml  prek.yml
bridge/: __init__.py  __main__.py  access.py  bot.py  config.py  db.py  github_app.py  live.py  render.py  store.py  webhook.py
bridge/cogs/: github_sync.py  notifications.py
docs/: commands.md  concepts.md  configuration.md  how-it-works.md  index.md  roadmap.md
tests/: test_live.py
